--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -2,7 +2,7 @@ mixin footer(value = {})
   - let _class = value.class;
   - let noSocials = value.noSocials || false;
   footer.footer(data-container)
-    .layout-contain-large.layout-padding.style-font-weight-bold.style-font-bold.style-spaceout-small.transition-fade.footer-layout(class=_class)
+    .container-lg.py-10.style-font-weight-bold.style-font-bold.style-spaceout-small.transition-fade.footer-layout(class=_class)
       div
         span.action-btn.action-btn-pointer-default(title="Copyright")
           .action-btn-group
@@ -18,7 +18,7 @@ mixin footer(value = {})
         span(itemscope itemtype="https://schema.org/SiteNavigationElement")
           +link({
             href: "/sitemap",
-            class: "layout-margin-left-mini",
+            class: "ml-mini",
           })(itemprop="url" title="The Joseph Ojo sitemap.")
             span(itemprop="name") Sitemap
         if !noSocials
@@ -26,20 +26,20 @@ mixin footer(value = {})
         if !noSocials
           +link({
             href: "https://www.linkedin.com/in/o-josephojo/",
-            class: "layout-margin-left-mini",
+            class: "ml-mini",
             content: "LinkedIn"
           })(target="_blank" rel="noopener" title="My LinkedIn page.")
           span= " - "
           +link({
             href: "https://github.com/josephojo",
-            class: "layout-margin-left-mini",
+            class: "ml-mini",
             content: "Github"
           })(target="_blank" rel="noopener" title="The official Joseph Ojo github link.")
           span= " - "
           span(itemprop="publisher" itemscope itemtype="https://schema.org/Organization" itemid="https://josephojo.com")
             +link({
               href: "mailto:laoluojo@gmail.com",
-              class: "layout-margin-left-mini",
+              class: "ml-mini",
               content: "Email"
             })(target="_blank" rel="noopener" itemprop="email" title="An email you can contact me with.")
       div
