--- a/src/pug/components/tile.pug
+++ b/src/pug/components/tile.pug
@@ -13,4 +13,4 @@ mixin tile(value = {})
         .layer-tile-title.style-bold= title
 
       if content
-        .layer-tile-content.layout-padding-top-small.style-line-height-spaced.style-font-14= content
+        .layer-tile-content.pt-small.style-line-height-spaced.style-font-14= content
