--- a/src/pug/pages/404.pug
+++ b/src/pug/pages/404.pug
@@ -3,7 +3,7 @@ extends /layout.pug
 block pageInfo
   -
     let page = {
-      
+
       url: "/404",
       name: "404",
       title: "Ooops!",
@@ -15,26 +15,26 @@ block preload
 
 block content
   //- Intro layer
-  +layer
+  .container-lg
     +layout({
       class: "layout-contain layer-overflow-hide"
     })
       section(class="layout-shorten layout-max-height-limited layout-flex layout-align-items-center layout-justify-content-center")
-        section.style-center.layout-margin-top-larger--device-phone
+        section.style-center.mt-larger--device-phone
           +head({
-            class: "layout-margin-bottom"
+            class: "mb"
           })
-            h1.style-font-35--device-phone.style-primary-dark.style-bold.layout-margin-dull 404, Page Not Found.
+            h1.style-font-35--device-phone.style-primary-dark.style-bold.margin-dull 404, Page Not Found.
           +main
             +p("Sorry, the page you are looking for doesn't exist. How about going back")
             +link({
               href: "/",
-              class: "style-italic style-underline layout-margin-left-mini",
+              class: "style-italic style-underline ml-mini",
               content: "home"
             })
             +p(".")
 
 block footer
   +footer({
-    class: "footer-stuck layout-margin-vert-top"
+    class: "footer-stuck mt"
   })
