--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,5 @@
-@use "./components/reset.scss";
+
+@use "./tailwind.css";
 @use "./components/fonts.scss";
 @use "./components/base.scss";
 @use "./components/navbar.scss";
