--- a/src/pug/components/column.pug
+++ b/src/pug/components/column.pug
@@ -1,5 +1,5 @@
 mixin column(value = {})
-  - let _class = value.class || "layout-col";
+  - let _class = value.class || "col";
 
   div(class=_class)
     block
