--- a/src/pug/components/image.pug
+++ b/src/pug/components/image.pug
@@ -11,9 +11,9 @@ mixin image(value = {})
     let origin = `https://res.cloudinary.com/okikio-assets/image/${external ? "fetch" : "upload"}/`;
     let urlParse = (filters = "w_auto") => cloudinaryTest ? `${origin + "q_auto:best/c_fit," + filters},dpr_auto,f_auto/${src.replace(/^cloudinary\//, "")}` : src;
 
-  .layer-image(class=_class title=alt)
-    figure.load-img(itemprop="image" itemscope itemtype="https://schema.org/ImageObject")&attributes(attributes)
-      .layer-image-overlay
+  .image&attributes(attributes)
+    figure(class=_class title=alt)
+      .image-overlay
       img.placeholder-img(src!=`${urlParse("w_50,e_blur:500")}.jpg` alt=alt loading="lazy")
       img.core-img(data-src!=`${urlParse()}.jpg` alt=alt loading="lazy" itemprop="url")
       noscript
