--- a/src/pug/pages/projects/battery-manager.pug
+++ b/src/pug/pages/projects/battery-manager.pug
@@ -3,38 +3,36 @@ extends /layout.pug
 block pageInfo
   -
     let page = {
-
       url: "/projects/battery-manager",
       name: "battery-manager",
       title: "Battery Manager — A tool designed to provide flexibility in a variety of research projects into batteries.",
       description: "A tool designed to provide flexibility in the variety of research that I and future research colleagues will undertake into the field of batteries."
     };
 
-block content
+block banner
   //- Banner layer
   +banner({
     title: "Project 2: Battery Manager (2018 – Present)",
     content: "A tool designed to provide flexibility in the variety of research that I and future research colleagues will undertake into the field of battery technology.",
     image: {
-      class: "effect-parallax hero-img",
       src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
       alt: "An image of the battery testing workstation box.",
-    }
+    },
+    mode: "banner"
   })
 
+block content
   //- Intro layer
-  +layer({
-    class: "layout-padding-horz-default--device-gt-tablet"
-  })
+  .container-lg
     +layout({
       class: "layout-shorten layout-contain"
     })
       +main({
-        class: "layout-padding-vert-small layout-clearfix"
+        class: "py-small layout-clearfix"
       })
         +p
           span.style-letter-head I
-          span.layout-inline.layout-margin-dull  started developing the battery manager at the beginning of my master’s research, and over the span of my two-year research, added a multitude of new capabilities.
+          span.inline.margin-dull  started developing the battery manager at the beginning of my master’s research, and over the span of my two-year research, added a multitude of new capabilities.
             br
             br
             | The purpose of the battery manager has been to provide complete flexibility in the variety of research that I and future researcher colleagues will undertake. Compared to commercially available alternatives, this custom-built battery manager permits the ability to swap sensors, test a variety of battery packs, add auxiliary devices, develop complex algorithms and remotely monitor tests, all the while achieving a 5-10 times cost reduction. The manager started small. With a basic bench power supply and electronic load, it could only perform tests on one or two cells at a time, and since my thesis was to contribute to the battery field with a health-conscious fast-charging algorithm for a battery pack, an upgrade was crucial.
@@ -58,20 +56,20 @@ block content
             | After the upgrade, the manager became more versatile, allowing testing on multiple cells in different configurations, thus, expanding the lab’s research capacity. The new system is also modular and can be expanded with additional power supplies and electronic loads. This new generation will be used while I complete my thesis on a health-conscious fast-charging algorithm for battery packs. While working on my research, I thought I should also streamline my colleagues’ workloads by providing a user interface (UI) for the manager. This will allow anyone to run basic tests with the pre-configured commands but also provide a script to run custom tests.
             br
             br
-            figure.layout-margin-horz--device-gt-tablet.style-center
+            figure.mx--device-gt-tablet.style-center
               +img-view({
                 src: "cloudinary/joseph-projects/battery-manager/01_BatteryManager",
                 alt: ""
               })(width="814px" height="543px")
-              figcaption.layout-margin-top-small.style-font-14.style-italic Figure 1: Battery Manager UI for testing battery packs
+              figcaption.mt-small.style-font-14.style-italic Figure 1: Battery Manager UI for testing battery packs
             br
             br
-            figure.layout-margin-horz--device-gt-tablet.style-center
+            figure.mx--device-gt-tablet.style-center
               +img-view({
                 src: "cloudinary/joseph-projects/battery-manager/02_DevConfig",
                 alt: ""
               })(width="733px" height="504px")
-              figcaption.layout-margin-top-small.style-font-14.style-italic Figure 2: Device Configuration UI for selecting and configuring devices
+              figcaption.mt-small.style-font-14.style-italic Figure 2: Device Configuration UI for selecting and configuring devices
             br
             | As with any software product, continuous improvement and addition of new features is important, and since the platform will be for research, changes and improvements will more likely than not be necessary. Which is why I have provided the source code for the UI in the
             span=" "
@@ -87,26 +85,26 @@ block content
 
   //- Next page layer
   +layer({
-    class: "layout-padding-horz-small layout-padding-horz-default--device-gt-tablet"
+    class: "px-small px-default--device-gt-tablet"
   })
     +layout({
       class: "layout-contain-large"
     })
       +link({
         href: "/projects/sarbot",
-        class: "layout-block layout-padding-horz-default--device-gt-tablet layer-black layer-next"
+        class: "block px-default--device-gt-tablet layer-black layer-next"
       }, true)
         +head({
-          class: "layout-padding-top-default"
+          class: "pt-default"
         })
           h3.layer-title.style-font-light.style-font-thin.style-spaceout.style-font-default--device-gt-tablet.style-font-20 Next
           +main({
-            class: "layout-padding-vert-sub-large"
+            class: "py-sub-large"
           })
             p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Search and Rescue Robot (SarBot)
 
           //- +tile({
-          //-   class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
+          //-   class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 mt-larger block layer-tile-outline",
           //-   image: {
           //-     class: "",
           //-     src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
