--- a/src/pug/pages/projects/boxer.pug
+++ b/src/pug/pages/projects/boxer.pug
@@ -3,38 +3,35 @@ extends /layout.pug
 block pageInfo
   -
     let page = {
-
       url: "/projects/boxer",
       name: "boxer",
       title: "Boxer — An autonomous robotic platform",
       description: "Boxer is an autonomous robotic platform very similar to a conventional vehicle due to its ackerman steering design, and independent suspension."
     };
 
-block content
-  //- Banner layer
+block banner
   +banner({
     title: "Project 1: Boxer (2019 – Present)",
     content: "An autonomous robotic platform very similar to a conventional vehicle due to its ackerman steering design, and independent suspension.",
     image: {
-      class: "effect-parallax hero-img",
       src: "cloudinary/joseph-projects/boxer/03_ADR_Render_04",
       alt: "An image of a rendered robot."
-    }
+    },
+    mode: "banner"
   })
 
+block content
   //- Intro layer
-  +layer({
-    class: "layout-padding-horz-default--device-gt-tablet"
-  })
+  .container-lg
     +layout({
       class: "layout-shorten layout-contain"
     })
       +main({
-        class: "layout-padding-vert-small layout-clearfix"
+        class: "py-small layout-clearfix"
       })
         +p
           span.style-letter-head B
-          span.layout-inline.layout-margin-dull
+          span.inline.margin-dull
             |  oxer is an autonomous robotic platform very similar to a conventional vehicle due to its ackerman steering design, and independent suspension. The project initially started as a platform to move material from one building to another, but has since been repurposed as a test platform for all research performed at
             span=" "
             +link({
@@ -63,23 +60,23 @@ block content
 
   //- Next page layer
   +layout({
-    class: "layout-contain-large layer-round layout-padding-horz-small layout-padding-horz--device-gt-tablet"
+    class: "layout-contain-large layer-round px-small px--device-gt-tablet"
   })
     +link({
       href: "/projects/battery-manager",
-      class: "layout-block layout-padding-horz-default--device-gt-tablet layer-black layer-next"
+      class: "block px-default--device-gt-tablet layer-black layer-next"
     }, true)
       +head({
-        class: "layout-padding-top-default"
+        class: "pt-default"
       })
         h3.layer-title.style-font-light.style-font-thin.style-spaceout.style-font-default--device-gt-tablet.style-font-20 Next
         +main({
-          class: "layout-padding-vert-sub-large"
+          class: "py-sub-large"
         })
           p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Battery Manager
 
           //- +tile({
-          //-   class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
+          //-   class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 mt-larger block layer-tile-outline",
           //-   image: {
           //-     class: "",
           //-     src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
