--- a/src/scss/components/mixins.scss
+++ b/src/scss/components/mixins.scss
@@ -1,16 +1,8 @@
 /* -- Fonts -- */
-/*
-    * font-family: 'Roboto', sans-serif;
-    * font-family: 'Montserrat', sans-serif;
-    * font-family: 'Frank Ruhl Libre', serif;
-    * font-family: 'Varela Round', sans-serif;
-    * font-family: 'Material Icons', sans-serif;
-*/
-
 // Variables
 $primary-light: #4e41ff;
 $primary: #2d22ca;
-$primary-dark: #271daf; // #774bec
+$primary-dark: #271daf;
 $secondary-light: #ff4b78;
 $secondary: #ff3a6b;
 $secondary-dark: #ce0c3c;
@@ -19,25 +11,19 @@ $tertiary: #ffde03;
 $tertiary-dark: #e5c702;
 $off-blue: #d7d4ff;
 
-$background: #eaeef1; // #e2ebf5
-$surface: #fff; //  #3b3c3e
+$background: #eaeef1;
+$surface: #fff;
 
 $white: #fff;
 $black: #000;
 
 $very-light: #efefef;
 $invert-white: #fff;
-$light: #eee; // #525252
+$light: #eee;
 $mid-light: #ddd;
 $mid: #ccc;
 $mid-dark: #bbb;
-$dark: #222; // #ddd
-
-$title-font: "Frank Ruhl Libre", serif;
-$light-font: "Varela Round", sans-serif;
-$icon-font: "Material Icons", sans-serif;
-$regular-font: "Roboto", sans-serif;
-$bold-font: "Montserrat", sans-serif;
+$dark: #222;
 
 $desktop: 1480;
 $laptop: 1080;
@@ -46,40 +32,8 @@ $phone: 480;
 
 $transitionDuration: 0.4s;
 
-$screen-size-desktop: "(min-width: #{$laptop}px)";
-
-$screen-size-gt-laptop: "(min-width: #{$laptop}px)"; // Greater Than
-$screen-size-laptop: "(min-width: #{$tablet}px) and (max-width: #{$laptop}px)";
-$screen-size-lt-laptop: "(max-width: #{$laptop}px)"; // Less Than
-
-$screen-size-gt-tablet: "(min-width: #{$tablet}px)"; // Greater Than
-$screen-size-tablet: "(min-width: #{$phone}px) and (max-width: #{$tablet}px)";
-$screen-size-lt-tablet: "(max-width: #{$tablet}px)"; // Less Than
-
-$screen-size-gt-phone: "(min-width: #{$phone}px)"; // Greater Than
-$screen-size-phone: "(max-width: #{$phone}px)";
-
-$size-humungus-xl: 500px;
-$size-humungus: 420px;
-$size-gigantic-xl: 340px;
-$size-gigantic: 220px;
-$size-huge-xl: 180px;
-$size-huge: 120px;
-$size-extra-xl: 100px;
-$size-extra-large: 90px;
-$size-sub-extra-large: 80px;
-$size-larger: 60px;
-$size-large: 50px;
-$size-sub-large: 40px;
-$size: 25px;
-$size-mid: 20px;
-$size-small: 15px;
-$size-smaller: 10px;
-$size-smallest: 8px;
-$size-mini: 5px;
-$size-nano: 2px;
-
 $colors: (
+    "navbar-gray": theme("colors.gray.300"),
     "primary-light": $primary-light,
     "primary": $primary,
     "primary-dark": $primary-dark,
@@ -107,6 +61,7 @@ $colors: (
 );
 
 $dark-colors: (
+    "navbar-gray": theme("colors.quaternary"),
     "primary-light": lighten($primary-dark, 5%),
     "primary": lighten($primary, 15%),
     "primary-dark": lighten($primary-light, 15%),
@@ -131,67 +86,6 @@ $dark-colors: (
     "dark": #ddd,
     "invert-black": $white,
 );
-
-$fonts: (
-    "title": $title-font,
-    "light": $light-font,
-    "regular": $regular-font,
-    "bold": $bold-font,
-);
-
-$sizes: (
-    "humungus-xl": $size-humungus-xl,
-    "humungus": $size-humungus,
-    "gigantic-xl": $size-gigantic,
-    "gigantic": $size-gigantic,
-    "huge-xl": $size-huge-xl,
-    "huge": $size-huge,
-    "extra-xl": $size-extra-xl,
-    "extra-large": $size-extra-large,
-    "sub-extra-large": $size-sub-extra-large,
-    "larger": $size-larger,
-    "large": $size-large,
-    "sub-large": $size-sub-large,
-    "default": $size,
-    "mid": $size-mid,
-    "small": $size-small,
-    "smaller": $size-smaller,
-    "smallest": $size-smallest,
-    "mini": $size-mini,
-    "nano": $size-nano,
-    "desktop": #{$desktop}px,
-    "laptop": #{$laptop}px,
-    "tablet": #{$tablet}px,
-    "phone": #{$phone}px,
-    "dull": 0,
-);
-
-@mixin deviceList($property, $val: 0px) {
-    $screenSizes: (
-        "desktop": $screen-size-desktop,
-        "gt-laptop": $screen-size-gt-laptop,
-        // Greater Than
-            "laptop": $screen-size-laptop,
-        "lt-laptop": $screen-size-lt-laptop,
-        // Less Than
-            "gt-tablet": $screen-size-gt-tablet,
-        // Greater Than
-            "tablet": $screen-size-tablet,
-        "lt-tablet": $screen-size-lt-tablet,
-        // Less Than
-            "gt-phone": $screen-size-gt-phone,
-        // Greater Than
-            "phone": $screen-size-phone,
-    );
-
-    @each $device-type, $screen-size in $screenSizes {
-        @media #{$screen-size} {
-            &--device-#{$device-type} {
-                #{$property}: #{$val};
-            }
-        }
-    }
-}
 
 @mixin applyTheme($property: color, $value: "primary") {
     #{$property}: map-get($colors, $value);
