--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -2,369 +2,271 @@
 @use "./layout.scss" as *;
 
 /* -- Header -- */
-.header {
-    $height: 60px;
-
-    position: relative;
-    display: block;
+.navbar {
+    @apply w-full h-16 fixed left-0 top-0;
+    z-index: 100;
 
     &-top-spot {
-        padding-top: $height + $size;
+        @apply pt-20;
     }
 
-    /* -- Navigation -- */
-    @at-root .navbar {
-        $radius: 18px;
+    &-layout {
+        @include applyTheme(background-color, "background");
+        @apply flex items-center justify-between relative;
+        @apply px-8;
 
-        position: relative;
-        max-height: 1000px;
-        height: $height;
-        z-index: 1200;
-        width: 100%;
-
-        .navbar-layout {
-            transition: background-color #{$transitionDuration} ease;
-            @include applyTheme(background-color, "background");
+        &,
+        &:before {
+            @apply container max-w-screen-1.5xl h-16;
+            @apply rounded-br-2xl rounded-bl-2xl;
         }
 
-        &-focus,
-        &-show,
+        &:before {
+            transition: background-color #{$transitionDuration} ease,
+                opacity 0.25s ease-out;
+            box-shadow: 0 5px 15px rgba(0, 0, 50, 0.08);
+            @include applyTheme(background-color, "surface");
+            @apply absolute block w-full h-full opacity-0 left-0 top-0;
+            content: "";
+        }
+    }
+
+    &-focus,
+    &-show,
+    &:hover {
+        .navbar-layout:before {
+            opacity: 1;
+        }
+
+        .title-line {
+            border-left-color: darken($background, 14%);
+            border-left-color: var(--light, darken($background, 14%));
+        }
+    }
+
+    &-head {
+        @apply flex items-center justify-between relative align-middle;
+        line-height: theme("spacing.16");
+    }
+
+    &-title {
+        transition: color #{$transitionDuration} ease;
+        letter-spacing: 0.03em;
+
+        @include applyTheme(color, "dark");
+
+        @apply p-2;
+        @apply flex relative items-center;
+        @apply text-base font-bold font-700 whitespace-nowrap;
+
+        img {
+            @apply w-auto h-5 inline-block align-middle;
+            min-height: theme("spacing.5");
+        }
+
         &:hover {
-            .navbar-layout:before {
-                opacity: 1;
-            }
-
-            // .navbar-title-line {
-            //     border-left-color: darken($background, 14%);
-            //     border-left-color: var(--light, darken($background, 14%));
-            // }
+            @include applyTheme(color, "primary-dark");
         }
 
-        &-fixed {
-            contain: layout size;
-            position: fixed;
-            left: 0;
-            top: 0;
+        &:focus {
+            @include applyTheme(color, "dark");
+        }
+
+        &,
+        &:hover,
+        &:active,
+        &:focus {
+            text-decoration: none;
+        }
+
+        .title-line {
+            transition: border #{$transitionDuration} ease;
+
+            border-left: 1px solid darken($background, 14%);
+            border-left-color: var(--light, darken($background, 14%));
+            @apply mx-2 h-3 inline-block align-middle;
+        }
+    }
+
+    &-main {
+        z-index: 10;
+        @apply items-center flex-nowrap flex;
+    }
+
+    &-link {
+        transition: color #{$transitionDuration} ease;
+        text-transform: uppercase;
+        text-decoration: none;
+
+        color: $black;
+        @include applyTheme(color, "dark");
+        @apply font-700 text-sm tracking-wide;
+        @apply w-full px-5 py-2;
+
+        .link-content {
+            @apply relative inline-block;
+
+            &:after {
+                transition: transform 0.25s cubic-bezier(0.25, 0.46, 0.45, 0.94),
+                    background-color #{$transitionDuration} ease;
+                @apply absolute -bottom-1 left-0 transform scale-x-0;
+                @include applyTheme(background-color, "primary-dark");
+                border: 1px solid transparent;
+                transform-origin: 100%;
+                transition-delay: 70ms;
+                border-radius: 10px;
+                display: block;
+                height: 3px;
+                width: 100%;
+                content: "";
+            }
+        }
+
+        &:hover,
+        &:focus,
+        &.active {
+            text-decoration: none;
+            @include applyTheme(color, "dark");
+
+            .link-content:after {
+                @apply transform scale-x-100;
+                transform-origin: 0;
+            }
+        }
+
+        &:focus {
+            color: $primary;
+            @include applyTheme(color, "primary-dark");
+        }
+
+        &.active {
+            &,
+            &:focus {
+                @include applyTheme(color, "primary-dark");
+            }
+        }
+    }
+
+    &-btn {
+        transition: color #{$transitionDuration} ease,
+            background-color 0.45s ease;
+        @apply ml-2 w-10 h-10 rounded-md;
+        @include applyTheme(background-color, "light");
+
+        svg {
+            @apply inline-block text-2xl;
+        }
+
+        &:hover {
+            @include applyTheme(background-color, "light");
+        }
+
+        &,
+        &:hover,
+        &:focus {
+            color: $primary;
+            color: var(--dark, $primary);
+            @apply outline-none;
+        }
+    }
+
+    &-foot {
+        visibility: hidden;
+    }
+
+    &-mobile-only {
+        display: block;
+    }
+
+    // Mobile navbar settings
+    @screen lt-sm {
+        &-mobile-only {
+            display: none;
+        }
+
+        &-layout,
+        &-main {
+            flex-direction: column;
         }
 
         &-layout {
-            height: $height;
-            margin: 0 auto;
-
             &,
             &:before {
-                border-radius: 0 0 $radius $radius;
+                @apply px-0 rounded-none;
             }
+        }
 
-            &:before {
-                @extend .layout-contain-enlarge;
-                transition: background-color #{$transitionDuration} ease,
-                    opacity 0.25s ease-out;
-                box-shadow: 0 5px 15px rgba(0, 0, 50, 0.08);
-                @include applyTheme(background-color, "surface");
-                position: absolute;
-                display: block;
-                height: 100%;
-                width: 100%;
-                content: "";
-                opacity: 0;
-                right: 0;
-                left: 0;
-                top: 0;
-            }
+        &-layout:before,
+        &-head {
+            z-index: 15;
+        }
+
+        &-layout:before,
+        &-main {
+            box-shadow: 0 2px 15px rgba(0, 0, 50, 0.08);
         }
 
         &-head {
-            vertical-align: middle;
-            flex-direction: row;
-            align-items: center;
-            flex-wrap: nowrap;
-            display: flex;
-            line-height: $height;
-        }
-
-        &-logo {
-            // transform: translate3d(0, 4px, 0);
-            vertical-align: middle;
-            display: inline-block;
-            line-height: $height;
-            min-height: 20px;
-            height: 20px;
-            width: auto;
-        }
-
-        &-title {
-            transition: color #{$transitionDuration} ease;
-            letter-spacing: 0.03em;
-            display: flex;
-            align-items: center;
-            padding-left: $size;
-            position: relative;
-            font-size: 17px;
-            color: $dark;
-            white-space: nowrap;
-            @include applyTheme(color, "dark");
-
-            & .name {
-                font-family: $bold-font;
-                font-weight: 800;
-            }
-
-            @media #{$screen-size-phone} {
-                & .last-name {
-                    display: none;
-                }
-            }
-
-            & .name,
-            .navbar-title-line {
-                @media (max-width: 300px) {
-                    display: none;
-                }
-            }
-
-            &,
-            &:focus {
-                text-decoration: none;
-            }
-
-            &-line {
-                transition: border #{$transitionDuration} ease;
-
-                border-left: 1px solid transparent;
-                border-left-color: darken($background, 14%);
-                border-left-color: var(--light, darken($background, 14%));
-
-                margin-right: $size-smaller;
-                margin-left: $size-smaller;
-                vertical-align: middle;
-                display: inline-block;
-                height: 14px;
-            }
+            @apply flex items-center justify-between relative align-middle;
+            @apply px-3 w-full h-16 leading-none;
         }
 
         &-main {
-            z-index: 10;
-        }
+            transition: transform 0.5s ease-out, visibility 0.4s ease,
+                background-color #{$transitionDuration} ease;
+            transform: translate3d(0, -100%, 0);
+            z-index: 0;
+            @apply p-2 w-full invisible;
 
-        &-list {
-            justify-content: center;
-            align-items: center;
-            white-space: nowrap;
-            // overflow-y: hidden;
-            list-style: none;
-            display: flex;
-            width: 100%;
-            margin: 0;
+            background-color: lighten($very-light, 2%);
+            @include applyTheme(background-color, "very-light");
         }
 
         &-link {
-            transition: color #{$transitionDuration} ease;
-            text-transform: uppercase;
-            font-family: $bold-font;
-            text-decoration: none;
-            line-height: $height;
-            letter-spacing: 1px;
-            font-weight: 600;
-            padding: 0 28px;
-            font-size: 14px;
-            color: $black; // #bbb8b8
-            @include applyTheme(color, "dark");
-            width: 100%;
+            transition: color 0.25s ease, background-color 0.25s ease;
+            line-height: theme("spacing.10");
+            @apply my-1;
 
-            &-content {
-                display: inline-block;
+            &:hover {
+                @include applyTheme(background-color, "navbar-gray");
+            }
 
-                &:before {
-                    transition: transform 0.25s
-                            cubic-bezier(0.25, 0.46, 0.45, 0.94),
-                        background-color #{$transitionDuration} ease;
-                    transform: translate3d(0, $height - 14px, 0) scaleX(0);
-                    @include applyTheme(background-color, "primary-dark");
-                    border: 1.5px solid transparent;
-                    transform-origin: 100% 50%;
-                    transition-delay: 70ms;
-                    border-radius: 10px;
-                    display: block;
-                    height: 2.5px;
-                    width: 100%;
-                    content: "";
+            &.active {
+                @include applyTheme(background-color, "primary-dark");
+
+                &,
+                &:hover {
+                    @include applyTheme(color, "invert-white");
+                }
+
+                &:hover {
+                    @include applyTheme(background-color, "primary");
                 }
             }
 
             &:hover,
             &:focus,
-            &-focus {
-                text-decoration: none;
-                @include applyTheme(color, "dark");
-
-                .navbar-link-content:before {
-                    transform: translate3d(0, $height - 14px, 0) scaleX(1);
-                    transform-origin: 0 50%;
-                }
-            }
-
-            &:active {
-                color: $primary;
-                @include applyTheme(color, "primary-dark");
-            }
-
-            &-focus {
-                &,
-                &:focus {
-                    @include applyTheme(color, "primary-dark");
+            &.active {
+                .link-content:after {
+                    @apply transform scale-x-0;
                 }
             }
         }
 
-        a:hover {
-            text-decoration: none;
-        }
-
-        &-menu,
-        &-btn {
-            & {
-                transition: color #{$transitionDuration} ease;
-            }
-
-            &,
-            &:hover,
-            &:focus {
-                color: $primary;
-                color: var(--dark, $primary);
-            }
-        }
-
-        &-mobile {
-            // display: none;
-            visibility: hidden;
-        }
-
-        &-desktop {
-            // display: block;
+        &-foot {
+            @apply flex items-center relative align-middle;
+            @apply h-16 space-x-1;
             visibility: visible;
         }
 
-        &-mobile-display {
-            display: none;
-        }
-
-        &-desktop-display {
-            display: block;
-        }
-
-        // Mobile navbar settings
-        @media (max-width: #{$tablet + 50}px) {
-            &-layout,
-            &-list {
-                flex-direction: column;
+        &-show {
+            .navbar-head {
+                box-shadow: none;
             }
 
-            &-layout {
-                &,
-                &:before {
-                    border-radius: 0;
-                }
-            }
-
-            &-layout:before,
-            &-head {
-                z-index: 15;
-            }
-
-            &-layout:before,
-            &-main {
-                box-shadow: 0 2px 15px rgba(0, 0, 50, 0.08);
-            }
-
-            &-head {
-                padding-right: $size-small;
-                position: relative;
-                width: 100%;
-            }
-
-            &-main {
-                transition: transform #{$transitionDuration} ease-out,
-                    opacity 0.3s ease 0.1s, visibility 0.3s ease 0.1s;
-                transform: translate3d(0, -100%, 0);
-                display: block;
-                width: 100%;
-                opacity: 0;
-                visibility: hidden;
-                z-index: 0;
-            }
-
-            &-list {
-                transition: background-color #{$transitionDuration} ease;
-                background-color: lighten($very-light, 2%); // #292d33
-                @include applyTheme(background-color, "very-light");
-                position: relative;
-                overflow: hidden;
-                display: block;
-
-                li {
-                    display: block;
-                    width: 100%;
-                }
-            }
-
-            &-show {
-                .navbar-head {
-                    box-shadow: none;
-                }
-
-                .navbar-main {
-                    transform: translate3d(0, 0, 0);
-                    opacity: 1;
-                    visibility: visible;
-                }
-            }
-
-            &-link {
-                line-height: $height - 12px;
-                padding: 0 24px;
-
-                &-content:before {
-                    transform: translate3d(0, $height - 18px, 0) scaleX(0);
-                }
-
-                &-focus,
-                &:focus,
-                &:hover {
-                    .navbar-link-content:before {
-                        transform: translate3d(0, $height - 18px, 0) scaleX(1);
-                    }
-                }
-            }
-
-            &-desktop {
-                visibility: hidden;
-                // display: none;
-            }
-
-            &-mobile {
-                // display: block;
+            .navbar-main {
+                transform: translate3d(0, 0, 0);
                 visibility: visible;
-            }
-
-            &-desktop-display {
-                display: none;
-            }
-
-            &-mobile-display {
-                display: block;
-            }
-        }
-
-        // Desktop navbar settings
-        @media (min-width: #{$tablet + 50}px) {
-            &-layout {
-                padding: 0 $size;
-                display: flex;
-            }
-
-            &-list {
-                height: $height;
             }
         }
     }
