--- a/src/scss/no-script.scss
+++ b/src/scss/no-script.scss
@@ -29,6 +29,7 @@ $mid-dark: #bbb;
 $dark: #222; // #ddd
 
 $dark-colors: (
+    "navbar-gray": theme("colors.quaternary"),
     "primary-light": lighten($primary-dark, 5%),
     "primary": lighten($primary, 15%),
     "primary-dark": lighten($primary-light, 15%),
@@ -55,6 +56,7 @@ $dark-colors: (
     "dark": #ddd,
     "invert-black": $white,
 );
+
 @media (prefers-color-scheme: dark) {
     html:not([theme="light"]) {
         @each $name, $value in $dark-colors {
